# no_code_servey

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements-voice.txt  requirements.txt
.streamlit/: config.toml
data/: Use Case AI-Powered Smart Survey To.txt
docs/: ARCHITECTURE.md  WHATSAPP_SETUP.md
src/survey_system/: __init__.py  config.py  exceptions.py  logger.py  streamlit_app.py  whatsapp_server.py
src/survey_system/adapters/: __init__.py
src/survey_system/adapters/persistence/: __init__.py  memory.py
src/survey_system/adapters/speech/: __init__.py  faster_whisper_stt.py  unavailable.py
src/survey_system/ai/: __init__.py  engine.py  groq_client.py
src/survey_system/chat/: __init__.py  session.py
src/survey_system/demodata/: __init__.py  family_survey.py
src/survey_system/embeddings/: __init__.py  encoder.py  store.py
src/survey_system/ports/: __init__.py  channels.py  persistence.py  speech.py
src/survey_system/schema/: __init__.py  survey.py
src/survey_system/survey_builder/: __init__.py  builder.py
src/survey_system/validation/: __init__.py  pipeline.py
src/survey_system/whatsapp/: __init__.py  app.py  incoming.py  orchestrator.py  security.py  sender.py  survey_payload.py
tests/: test_builder.py  test_chat_session.py  test_config.py  test_embeddings.py  test_engine.py  test_exceptions.py  test_faster_whisper_stt.py  test_groq_client.py  test_logger.py  test_schema.py  test_validation.py  test_whatsapp_app.py  test_whatsapp_incoming.py  test_whatsapp_orchestrator.py  test_whatsapp_security.py
